--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
     "html-entities": "^2.4.0",
     "next": "14.0.3",
+    "openai": "^4.19.0",
     "react": "^18",
     "react-dom": "^18"
   },
