--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.0.3",
     "openai": "^4.19.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/node": "^20",
